--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,16 @@
 // Colors
+$blue: rgb(44, 163, 254);
+$dark-blue: #364051;
+$grey: #8f8f8f;
+$dark-grey: #333333;
+$light-blue-grey: #c9e6ff;
+$dirty-white: #f7f7f7;
+
+// Font Size
+$font-size-large: 1.8rem;
+$font-size-small: 1.4rem;
 // Spacing
+$button-font-size-l: 2.4rem;
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
