fixed spelling error, added database observer for realtime device sync

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,4 +10,4 @@
 @import './components/form';
 @import './utils/visibility';
 @import './components/list';
-@import './components/laoder';
+@import './components/loader';
